@@ -249,7 +249,6 @@ GtkWidget *build_var_popup (void)
 	N_("Runs test"),
 	N_("Edit attributes"),
 	N_("Delete"),
-	N_("Simulate..."),
 	N_("Define new variable...")
     };
 
@@ -260,11 +259,8 @@ GtkWidget *build_var_popup (void)
     var_menu = gtk_menu_new();
 
     for (i=0; i<n_items; i++) {
-	if (i == 2 && !dataset_is_time_series(datainfo) &&
-	    datainfo->structure != STACKED_TIME_SERIES) {
-	    continue;
-	}
-	if (!dataset_is_time_series(datainfo) && i >= 6 && i <= 11) {
+	if (!dataset_is_time_series(datainfo) && 
+	    (i == 2 || (i >= 6 && i <= 11))) {
 	    continue;
 	}
 	var_item = gtk_menu_item_new_with_label(_(var_items[i]));
