@@ -27,6 +27,8 @@ int generate (double ***pZ, DATAINFO *pdinfo,
 
 int genrtime (double ***pZ, DATAINFO *pdinfo, int tm);
 
+int genrunit (double ***pZ, DATAINFO *pdinfo);
+
 int dummy (double ***pZ, DATAINFO *pdinfo);
 
 int paneldum (double ***pZ, DATAINFO *pdinfo); 
