@@ -7,6 +7,8 @@ version 1.3.2
   estimated using robust standard errors (format string issue)
 - Fix bug: the session "graph page" was not appearing even when
   a valid latex executable was available
+- Fix bug: gretl console would not respond in case of an error when
+  executing a command loop
 - Improve efficiency of test for existence of helper programs on
   Linux/unix
 - Add auto-lag option to the GUI dialog box for the ADF test
@@ -19,6 +21,9 @@ version 1.3.2
   "$test" and "$pvalue" in genr)
 - "label" command: if only a varname is given, print the variable's
    current label, if any
+- "genr unit": generates an index variable for the cross-sectional 
+  units in a panel dataset (panel data only)
+- Remove unused GUI popup menu item "Simulate..."
 - Updates to documentation (manual and helpfiles)
 
 01/19/2005 version 1.3.1
